src/test/ui/generator/no-parameters-on-generators.stderr
error[E0628]: generators cannot have explicit parameters
  --> $DIR/no-parameters-on-generators.rs:4:15
   |
LL |     let gen = |start| {
   |               ^^^^^^^

error: aborting due to previous error

